test/files/errors/reservedKeyword.jg
if int () {

}

# Error: Compiler was unable to compile the code (AST->IST), reason: Error: if is a reserved keyword